* initial release
** Corrected dangerous error
*** 01/26
The update 01/13 damaged my linux system; hopefully no one suffered from it.

** Corrected (bash) cleaning block
It was removing more older archives than it should.

*** 01/13
Major releases became more special than before. Assuming that the release's version is =N-0-0=,
1. The file =N-0-0/previous.gz= is a sorted list of previous files names presented in all previous archives.
2. Not only recently modified files are archived, but also those with names missing in =N-0-0/previous.gz=
3. Names of the newly detected file names (no mater what's the modification date) are saved to =N-0-0/new.gz=

*** 01/12
Two problems fixed:
1. The code was deleting previous major ("macro") archives  when creating new one.
2. During creation of new macro N-archive (having indices N-0-0) the code /was/ removing all /previous/ macro archives with indices M-*-* (where M=N-1).
   Now when a new macro N-archive is created, only archives with indices M-*-* (where M=N-2) except for M-0-0 are erased.
   (There was a similar problem with meso-archives which is also fixed.)

** Should be safe to use
*** 01/06
renamed =letf= → =lett=

*** 2021-01-05
Publishing the code after 10 days of usage.