@@ -1,3 +1,3 @@
-0.2.2
-← generated 01/13 15:55 from [[file:change-log.org][change-log.org]]
+0.3.2
+← generated 02/09 11:59 from [[file:change-log.org][change-log.org]]
 by [[file:helpers/derive-version.el][derive-version.el]]
